--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-media": "^1.10.0",
     "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.4",
     "redux": "^4.1.2",
     "styled-components": "^5.3.0"
   },
