--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "react-dom": "^17.0.2",
     "react-media": "^1.10.0",
     "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.4",
+    "react-spring": "^9.4.2",
     "redux": "^4.1.2",
     "styled-components": "^5.3.0"
   },
