--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.4",
     "react-spring": "^9.4.2",
+    "react-use-measure": "^2.1.1",
     "redux": "^4.1.2",
     "seamless-scroll-polyfill": "^2.1.6",
     "styled-components": "^5.3.0"
